src/styles/small.scss
body {
  background-color: $white;
}
h1 {
  font-size: 1.5rem;
  margin-bottom: .5rem;
  color: $black;
}
h2 {
  font-size: 1.2rem;
  margin-bottom: .5rem;
  color: $black;
}
h3 {
  font-size: 1rem;
  margin-bottom: .3rem;
  color: $black;
}
a {
  text-decoration: none;
}
p {
  line-height: 1.5rem;
  color: $grey;
}
#root {
  display: grid;
  min-height: 100vh;
  grid-template-rows: auto 1fr auto;
}
main {
  width:100%;
  margin: 0 auto;
  padding: 2rem 0;
}
.padding__wrapper {
  padding: 0 1rem;
}
.btn__wrapper {
  padding: 0 1rem;
}
/*
  Icons
*/
.icon__right-arrow {
  font-size: 1.5rem;
}
.icon__heart {
  font-size: 1.5rem;
  color: $primaryColor;
}

.btn__close {
  position: absolute;
  right: .5rem;
  top: .5rem;
}

.icon__delete {
  font-size: 1.5rem;
  color: black;
  
}
.icon__heart--btn {
  z-index: 500;
}
/*
  Loader
*/
.loader__container {
  display: flex;
  flex-direction: column;
  flex: 1;
  align-items: center;
  justify-content: center;
  height: 100%;
}
.lds-ripple {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}
.lds-ripple div {
  position: absolute;
  border: 4px solid $primaryColor;
  opacity: 1;
  border-radius: 50%;
  animation: lds-ripple .9s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}
.lds-ripple div:nth-child(2) {
  animation-delay: -0.5s;
}
@keyframes lds-ripple {
  0% {
    top: 36px;
    left: 36px;
    width: 0;
    height: 0;
    opacity: 1;
  }
  100% {
    top: 0px;
    left: 0px;
    width: 72px;
    height: 72px;
    opacity: 0;
  }
}

/*
  Containers
*/
.items__container {
  max-width: 1140px;
  margin: 0 auto;
  height: 100%;
  &.padding {
    padding: 0 1rem;
  }
}
.content__container {
  max-width: 768px;
  margin: 0 auto;
  height: 100%;
  &.padding {
    padding: 0 1rem;
  }
}

/*
  Header Component
*/
.header {
  background-color: darken($white, 2%);
  box-shadow: 0px 0px 2px $grey;
  padding: .5rem 0;
}
.header__container {
  display: flex;
  align-items: center;
  max-width: 1140px;
  padding: 0 1rem;
  margin: 0 auto;
}
.header__nav {
  display: flex;
  flex: 1;
  justify-content: space-between;
  align-items: center;
}
.header__link {
  width: 4rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: $black;
  gap: .2rem;
  height: 3rem;
  font-size: 10px;
  &:hover {
    color: $primaryColor;
  }
  p {
    line-height: 1rem
  }
  &.active {
    color: $primaryColor;
  }
}
.header__icon {
  font-size: 1.5rem;
}
.header__img {
  display: none;
}

/*
  Items Component
*/
.items__grid {
  display: grid;
  grid-template-columns: 1fr;
}

/*
  MatchCard Component 
*/

.MatchCard__top {
  display: flex;
}
.MatchCard__link {
  color: $primaryColor;
  text-decoration: underline;
  text-transform: capitalize;
  font-weight: 700;
}
.MatchCard__bottom {
  margin-top: 1rem;
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  padding-top: 1rem;
  border-top: 1px solid lighten($grey, 20%);

}
.MatchCard__list {
  display: flex;
  flex-direction: column;
  gap: .5rem;
}


.MatchCard__header {
  display: block;
  font-size: 1.2rem;
  margin-bottom: .5rem;
  text-transform: capitalize;
  color: $black;
  font-weight: 700;
  &:hover {
    color: $primaryColor;
  }
}

.MatchCard__text {
  font-size: .9rem;
  color: $black;
  &.count {
    display: flex;
    align-items: center;
    gap: .3rem;
    color: $primaryColor;
    font-weight: 700;
    text-decoration: underline;
    .caret {
      font-size: 1.3rem;
    }
  }
}

.MatchCard__icon {
  font-size: 2rem;
  color: $black;
}
.MatchCard__envelopeIcon {
  color: $grey;
  font-size: 2rem;
  &:hover {
    color: $black;
  }
}

.MatchCard__user {
  text-align: left;
  padding: 0 1rem;
  flex: 1;
}

/*
  ImageSlot 
*/
.ImageSlot__input-wrapper {
  position: relative;
  width: 100%;
  height: 80px;
  border: 1px solid $grey;
  border-radius: 4px;
  overflow: hidden;
}

.ImageSlot__input {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  cursor: pointer;
}
.ImageSlot__overlay {
  background-color: $white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: $grey;
  gap: 0.5rem;
  align-items: center;
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  pointer-events: none;
}
.ImageSlot__prompt {
  font-size: 0.9rem;
  color: $grey;
}
.ImageSlot__camera {
  font-size: 1.5rem;
}
.ImageSlot__container {
  position: relative;
  height: 80px;
}
.ImageSlot__img {
  width: 100%;
  height: 100%;
  object-fit: contain;
  object-position: center;
  border-radius: 4px;
}

/*
  Form
*/
.search__caption {
  margin-bottom: 2rem;
  color: $grey;
  font-size: .8rem;
  span {
    font-weight: 700;
    text-transform: capitalize;
  }
}
.form__title {
  font-size: 1.5rem;
  margin-bottom: .5rem;
}
.form__subtitle {
  color: $grey;
}
.form {
  display: flex;
  flex-direction: column;
  padding: 2rem 0;
  min-width: 100%;
}
.form__label {
  display: flex;
  flex-direction: column;
  color: $grey;
  position: relative;
}
.form__input {
  border: 1px solid $grey;
  margin-top: .2rem;
  margin-bottom: 1rem;
  padding: 1rem;
  border-radius: 4px;
    -webkit-appearance: none;
  &::placeholder {
    color: $grey;
  }
  &.textarea {
    resize: none;
    height: 150px;
  }
  &.search {
    margin-bottom: .2rem;
    background-image: url('../assets/search.svg');
    background-repeat: no-repeat;
    background-position: 1rem;
    padding-left: 3rem;
  }
  &.select {
    margin-bottom: 1rem;
    background-image: url('../assets/chevronDown.svg');
    background-repeat: no-repeat;
    background-position: calc(100% - 1rem);
    padding-right: 3rem;
  }
}
.form__signup--text {
  margin-top: .5rem;
  color: $grey;
  font-weight: 700;
  font-size: .9rem;
  text-align: center;
}
.form__signup--link {
  color: $primaryColor;
}
.form__image--container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: .5rem;
  margin-bottom: 1rem;
}
/* ... */

